--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ By integrating high-resolution genomic data with robust computational analysis, 
       </li>
       
       <li class="social-item">
-        <a href="https://www.linkedin.com/in/nischalbh" class="social-link" , target="_blank">
+        <a href="https://www.linkedin.com/in/nishbh" class="social-link" , target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </li>
